--- a/spectra-react/src/App.css
+++ b/spectra-react/src/App.css
@@ -4,50 +4,23 @@
 
 /* Add this to your CSS file */
 @keyframes fadeOut {
-  from { background-color: #d18bff; }
-  to { background-color: #9333ea; } /* Replace with the actual default background color */
+    from {
+        background-color: #d18bff;
+    }
+    to {
+        background-color: #9333ea;
+    }
+    /* Replace with the actual default background color */
 }
 
 .highlighted-key {
-  animation: fadeOut 0.5s forwards;
+    animation: fadeOut 0.5s forwards;
 }
-
 
 .App {
-  text-align: center;
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+    background-color: #1f2937;
 }
